# PerthMap

./: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yml
data_gen/: README.md  generate_data.ipynb  prepare_gtfs.py
data_gen/data/: pyproject.toml
src/: App.tsx  index.css  main.tsx
src/assets/: poly.json
src/components/Map/: Map.tsx  SidePanel.tsx
src/components/Map/__tests__/: Map.test.tsx
src/components/ui/: slider.tsx
src/components/ui/__tests__/: slider.test.tsx
src/hooks/__tests__/: use-mobile.test.tsx
src/test/: setup.ts
